--- a/weburl.html
+++ b/weburl.html
@@ -23,7 +23,11 @@
         border: 1px dotted;
         text-align: center;
       }
-      
+      .video {
+        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px */
+        height: 124px;
+        line-height: 124px;
+      }
       .thermometer, .order, .social {
         /* line-height to vertically center: http://phrogz.net/css/vertical-align/indel.html */
         height: 40px;
