--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         body {
          padding-top: 80px;
         }
-       .linediv-l {
+       .linediv-l { 
          border-right: 1px white solid;
         }
        .linediv-r {
@@ -76,8 +76,8 @@
     </style>
   </head>
   <body>
-    <!-- Navbar
-    ================================================== -->
+    <!-- Mobile-friendly navbar adapted from example. -->
+    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -86,23 +86,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html">Logo</a>
+          <a class="brand" href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active">
-                <a href="./index.html">Home</a>
-              </li>
-              <li class="">
-                <a href="./getting-started.html">Blank</a>
-              </li>
-              <li class="">
-                <a href="./scaffolding.html">About</a>
-              </li>
-              <li class="">
-                <a href="./base-css.html">Contact</a>
-              </li>
+              <li class="active"><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Home</a></li>
+              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#about">About</a></li>
+              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#contact">Contact</a></li>
             </ul>
-          </div>
+          </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
