--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="./480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -170,7 +170,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="./480x300">
         </div>
         <div class="span5 copy">
           <p>
@@ -206,7 +206,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="./480x300">
         </div>
       </div>
 
