--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Gregare Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Bitstarter page for gregare.com">
+    <meta name="author" content="Lee Adams">
 
     <!-- Le styles -->
     <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/nekopa666/assets/css/bootstrap-combined.no-icons.min.css">
@@ -24,11 +24,7 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://s3-us-west-2.amazonaws.com/nekopa666/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://s3-us-west-2.amazonaws.com/nekopa666/assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://s3-us-west-2.amazonaws.com/nekopa666/assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="https://s3-us-west-2.amazonaws.com/nekopa666/assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/nekopa666/assets/ico/favicon.png">
+    <link rel="icon" href="https://s3-us-west-2.amazonaws.com/nekopa666/assets/ico/favicon.png">
 
   <style type="text/css">
 
@@ -128,12 +124,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Bitstarter</a>
+          <a class="brand" href="http://ec2-54-213-72-54.us-west-2.compute.amazonaws.com:8080/#">Gregare</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Home</a></li>
-              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#about">About</a></li>
-              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#contact">Contact</a></li>
+              <li class="active"><a href="http://ec2-54-213-72-54.us-west-2.compute.amazonaws.com:8080/#">Home</a></li>
+              <li><a href="http://ec2-54-213-72-54.us-west-2.compute.amazonaws.com:8080/#about">About</a></li>
+              <li><a href="http://ec2-54-213-72-54.us-west-2.compute.amazonaws.com:8080/#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -145,19 +141,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Gregare.com</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Come together and make your startup ignite!.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="https://s3-us-west-2.amazonaws.com/nekopa666/assets/img/480x300">
+          <img class="img-polaroid" src="https://s3-us-west-2.amazonaws.com/nekopa666/assets/img/business-model-canvas.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -169,17 +165,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+                <h3>0001</h3> <p>backer</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$1200</h3> <p>of $12,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>49</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -188,8 +184,8 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 10%;"></div>
+              <div class="bar bar-warning" style="width: 90%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
